updates for revision

--- a/figures/Figure1.tex
+++ b/figures/Figure1.tex
@@ -357,7 +357,7 @@
 	%%% dual-luciferase construct
 	\coordinate[yshift = -\columnsep] (DL construct) at (enhancers |- xlabel.south);
 	
-	\coordinate[shift = {(\columnsep, -1)}] (construct) at (DL construct);
+	\coordinate[shift = {(.1, -1)}] (construct) at (DL construct);
 	
 	\draw[dashed, thick] (construct) -- ++(.5, 0) coordinate (c1);
 	
