--- a/figures/figures_main.tex
+++ b/figures/figures_main.tex
@@ -39,7 +39,7 @@
 \newcommand{\fighuge}{\normalsize}
 
 %%% page layout
-\geometry{letterpaper, textwidth = 174mm, textheight = 237.5mm, marginratio = 1:1}
+\geometry{letterpaper, textwidth = 165mm, textheight = 220mm, marginratio = 1:1}
 \renewcommand{\textfraction}{0}
 \makeatletter
 	\setlength{\@fptop}{0pt}
@@ -204,6 +204,30 @@
 	\fi%
 }
 
+
+\newif\ifrev
+\newcounter{rfig}
+
+\DeclareFloatingEnvironment[fileext = lorf, name = Rebuttal \figurename]{revfigure}
+
+\newenvironment{rfig}{%
+	\begin{revfigure}[p]%
+		\stepcounter{rfig}%
+		\setcounter{subfig}{0}%
+		\pdfbookmark{\revfigurename\ R\therfig}{rebuttal_figure\therfig}
+		\tikzsetnextfilename{rebuttal_fig\therfig}%
+		\tikzset{jpeg export}%
+		\fignormal%
+		\centering%
+}{%
+	\end{revfigure}%
+	\clearpage%
+	\ifnpc%
+		\makenextpagecaption%
+		\global\npcfalse%
+	\fi%
+}
+
 %% command to put the caption on the next page
 % use instead of a normal caption: \nextpagecaption{<caption text>}
 \makeatletter
@@ -226,7 +250,7 @@
 \DeclareCaptionJustification{nohyphen}{\hyphenpenalty = 10000}
 
 \captionsetup{
-	labelsep = period,
+	labelsep = space,
 	justification = nohyphen,
 	singlelinecheck = false,
 	labelfont = bf,
@@ -236,9 +260,9 @@
 }
 \captionsetup[figure]{skip = .5\baselineskip}
 
-\newcommand{\titleend}{\\}
-\newcommand{\nextentry}{\\}
-\newcommand{\captiontitle}[2][]{\textbf{#2.}\titleend}
+\newcommand{\titleend}{. }
+\newcommand{\nextentry}{ }
+\newcommand{\captiontitle}[2][]{#2\titleend #1}
 
 
 %%% subfigure labels
@@ -255,18 +279,18 @@
 	\node[anchor = north west, inner sep = 0pt, font = \large\bfseries, #1] at (#2) {\strut\stepcounter{subfig}\ifsubfigupper\Alph{subfig}\else\alph{subfig}\fi};
 }
 
-\newcommand{\subfigrefsep}{}
+\newcommand{\subfigrefsep}{,}
 \newcommand{\subfigrefand}{~and~}
 \newcommand{\subfigrefrange}{\textendash}
 
 \newcommand{\subfigunformatted}[1]{\ifsubfigupper\uppercase{#1}\else\lowercase{#1}\fi}
 \newcommand{\plainsubfigref}[1]{\textbf{\subfigunformatted{#1}}}
-\newcommand{\subfig}[1]{\textbf{(\plainsubfigref{#1})}\subfigrefsep}
-\newcommand{\subfigtwo}[2]{\textbf{(\plainsubfigref{#1}\subfigrefand\plainsubfigref{#2})}\subfigrefsep}
-\newcommand{\subfigrange}[2]{\textbf{(\plainsubfigref{#1}\subfigrefrange\plainsubfigref{#2})}\subfigrefsep}
-\newcommand{\parensubfig}[2][]{\textbf{(#1\plainsubfigref{#2})}}
-\newcommand{\parensubfigtwo}[3][]{\textbf{(#1\plainsubfigref{#2}\subfigrefand\plainsubfigref{#3})}}
-\newcommand{\parensubfigrange}[3][]{\textbf{(#1\plainsubfigref{#2}\subfigrefrange\plainsubfigref{#3})}}
+\newcommand{\subfig}[1]{\plainsubfigref{#1}\subfigrefsep}
+\newcommand{\subfigtwo}[2]{\plainsubfigref{#1}\subfigrefand\plainsubfigref{#2}\subfigrefsep}
+\newcommand{\subfigrange}[2]{\plainsubfigref{#1}\subfigrefrange\plainsubfigref{#2}\subfigrefsep}
+\newcommand{\parensubfig}[2][]{(#1\plainsubfigref{#2})}
+\newcommand{\parensubfigtwo}[3][]{(#1\plainsubfigref{#2}\subfigrefand\plainsubfigref{#3})}
+\newcommand{\parensubfigrange}[3][]{(#1\plainsubfigref{#2}\subfigrefrange\plainsubfigref{#3})}
 
 \newcommand{\supports}[1]{(Supports #1) }
 
@@ -284,9 +308,16 @@
 \crefname{suppdata}{Supplemental Data Set}{Supplemental Data Sets}
 
 
+%%% reference for this paper
+% update once we have a DOI (e.g. "Plant Cell (2015). 10.1105/tpc.18.00001.")
+\newcommand{\paperref}{}
+
+
 %%% what to include
 \maintrue
 \supptrue
+\revfalse
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%   ||    preamble end    ||   %%%
@@ -297,6 +328,10 @@
 \begin{document}
 	\sffamily
 	\frenchspacing
+	
+	%%% change names of figures
+	\renewcommand\thesuppfigure{S\arabic{suppfigure}}
+	\renewcommand\therevfigure{R\arabic{revfigure}}
 	
 	
 	%%% Main figures start
@@ -311,7 +346,7 @@
 				\subfig{D} Transgenic \textit{Arabidopsis} lines were generated with T-DNAs harboring a constitutively expressed luciferase (Luc) gene and a nanoluciferase (NanoLuc) gene under control of a 35S minimal promoter coupled to the 35S enhancer or the \segment{B} segments of the \enhancer{AB80}, \enhancer{Cab-1}, or \enhancer{rbcS-E9} enhancers.\nextentry
 				\subfig{E} Nanoluciferase activity was measured in 5 T2 plants from these lines and normalized to the activity of luciferase. The NanoLuc/Luc ratio was normalized to a control construct without an enhancer (none; $\log_2$ set to 0).\nextentry
 				\subfig{F} The mean NanoLuc/Luc ratio was compared to the mean enhancer strength determined by STARR-seq. Pearson's $R^2$, Spearman's $\rho$, and number ($n$) of enhancers are indicated. A linear regression line is shown as a dashed line.  Error bars represent the 95\% confidence interval.\nextentry
-				Box plots in \parensubfig{B}, \parensubfig{C}, and \parensubfig{E} represent the median (center line), upper and lower quartiles (box limits), 1.5$\times$ interquartile range (whiskers), and outliers (points) for all corresponding barcodes \parensubfigtwo{B}{C} or plant lines \parensubfig{E} from two \parensubfigtwo{B}{C} or three \parensubfig{E} independent replicates. Numbers at the bottom of each box plot indicate the number of samples in each group.
+				Box plots in \plainsubfigref{B}, \plainsubfigref{C}, and \plainsubfigref{E} represent the median (center line), upper and lower quartiles (box limits), 1.5$\times$ interquartile range (whiskers), and outliers (points) for all corresponding barcodes \parensubfigtwo{B}{C} or plant lines \parensubfig{E} from two \parensubfigtwo{B}{C} or three \parensubfig{E} independent replicates. Numbers at the bottom of each box plot indicate the number of samples in each group.
 			}%
 			\label{fig:PEfl_fwd}%
 		\end{fig}
@@ -330,7 +365,8 @@
 			\caption{%
 				\captiontitle{Mutation-sensitive regions harbor transcription factor binding sites}%
 				\subfig{A} 4 to 5 mutation-sensitive regions (shaded rectangles; labeled a\textendash e) were defined for the \segment{B} segments of the \enhancer{AB80}, \enhancer{Cab-1}, and \enhancer{rbcS-E9} enhancers. The mutational sensitivity plots are reproduced from \cref{fig:PEV_ld_MutSens}.\nextentry
-				\subfigrange{B}{E} Sequence logo plots were generated from the enhancer strength in the \light{} \parensubfigrange{B}{D} or \dark{} \parensubfig{E} of all possible single-nucleotide substitution variants within the indicated mutation-sensitive regions of the \enhancer{AB80} \parensubfig{B}, \enhancer{Cab-1} \parensubfig{C}, or \enhancer{rbcS-E9} \parensubfigtwo{D}{E} enhancers. The sequence of the wild-type enhancer and the position along it is shown on the x axis. Letters with dark colors in the logo plot represent wild-type bases. The sequence logos for each region were compared to known transcription factor binding motifs and significant matches are shown below the plots.
+				\subfigrange{B}{E} Sequence logo plots were generated from the enhancer strength in the \light{} \parensubfigrange{B}{D} or \dark{} \parensubfig{E} of all possible single-nucleotide substitution variants within the indicated mutation-sensitive regions of the \enhancer{AB80} \parensubfig{B}, \enhancer{Cab-1} \parensubfig{C}, or \enhancer{rbcS-E9} \parensubfigtwo{D}{E} enhancers. The sequence of the wild-type enhancer and the position along it is shown on the x axis. Letters with dark colors in the logo plot represent wild-type bases. The sequence logos for each region were compared to known transcription factor binding motifs and significant matches are shown below the plots.\nextentry
+				\subfig{F} For each transcription factor binding motif matching a sequence logo plots derived from the saturation mutagenesis data in the light \parensubfigrange[mutagenesis; see ]{B}{D} or identified by the motif-scanning approach (scanning; see \cref{sfig:PEV_ld_fimo}), the correlation (Pearson's $r$) between the strength of an enhancer variant and the score of how well the variant sequence matches this motif is plotted as points. The lines represent the average correlation for all motifs of a given enhancer.
 			}%
 			\label{fig:PEV_ld_motifs}
 		\end{fig}
@@ -341,7 +377,8 @@
 				\captiontitle{Circadian oscillation is robustly encoded in the \enhancer{AB80}, \enhancer{Cab-1}, and \enhancer{rbcS-E9} enhancers}%
 				\subfig{A} All possible single-nucleotide variants of the \enhancer{AB80}, \enhancer{Cab-1}, and \enhancer{rbcS-E9} enhancers were subjected to Plant STARR-seq in tobacco leaves. On the morning of the third day after transformation (\timepoint{-8}), the plants were shifted to constant light. Leaves were harvested for RNA extraction starting at mid-day (\timepoint{0}) and in 6 hour intervals (\timepoint{6}, 20, 26, and 32) afterwards.\nextentry
 				\subfig{B} A sine wave with a period of 24 h was fitted to the enhancer strength of a given variant across all sampled time points. The fitted line is plotted together with the measured data points for the wild-type enhancers. The equilibrium point of the curves was set to 0. The amplitude is shown as a two-sided arrow at the time of highest enhancer strength (peak time). The goodness-of-fit ($R^2$) is indicated. The shaded gray area represents the timing of the dark period if the plants had not been shifted to constant light.\nextentry
-				\subfigtwo{C}{D} Histograms of the difference between the amplitude \parensubfig{C} and peak time \parensubfig{D} of each single-nucleotide variant relative to the wild-type enhancer. For comparison, the difference in enhancer strength at \timepoint{0} is also shown in \parensubfig{C}. Variants with a below average goodness-of-fit are grayed out in \parensubfig{D}.
+				\subfigtwo{C}{D} Histograms of the difference between the amplitude \parensubfig{C} and peak time \parensubfig{D} of each single-nucleotide variant relative to the wild-type enhancer. For comparison, the difference in enhancer strength at \timepoint{0} is also shown in \plainsubfigref{C}. Variants with a below average goodness-of-fit are grayed out in \plainsubfigref{D}.\nextentry
+				Only data for the \segment{B} enhancer segments is shown.
 			}%
 			\label{fig:PEV_cr}
 		\end{fig}
@@ -350,22 +387,22 @@
 			\input{Figure5}%
 			\caption{%
 				\captiontitle{Epistatic interactions between single-nucleotide deletions}%
-				\subfigtwo{A}{B} Selected single-nucleotide deletion variants of the \enhancer{AB80}, \enhancer{Cab-1}, and \enhancer{rbcS-E9} enhancers and all possible combinations with two of these deletions were subjected to Plant STARR-seq in tobacco plants grown in normal light/dark cycles \parensubfig{A} or completely in the dark \parensubfig{B} for two days prior to RNA extraction. For each pair of deletions, the expected enhancer strength based on the sum of the effects of the individual deletions (additive model) is plotted against the measured enhancer strength. The color of the points represents the distance between the two deletions in a pair.
+				\subfigrange{A}{C} Selected single-nucleotide deletion variants (\plainsubfigref{A}; \textDelta1, \textDelta2, \textDelta3, \dots) of the \segment{B} segment of the \enhancer{AB80}, \enhancer{Cab-1}, and \enhancer{rbcS-E9} enhancers and all possible combinations with two of these deletions (\plainsubfigref{A}; \textDelta1+\textDelta2, \textDelta1+\textDelta3, \textDelta2+\textDelta3, \dots) were subjected to Plant STARR-seq in tobacco plants grown in normal light/dark cycles \parensubfig{B} or completely in the dark \parensubfig{C} for two days prior to RNA extraction. For each pair of deletions, the expected enhancer strength based on the sum of the effects of the individual deletions (additive model) is plotted against the measured enhancer strength. The color of the points represents the distance between the two deletions in a pair.
 			}%
 			\label{fig:PEVdouble}
 		\end{fig}
 		
 		\begin{fig}
 			\input{Figure6}%
-			\caption{%
+			\nextpagecaption{%
 				\captiontitle{The number, spacing, and order of mutation-sensitive regions affects enhancer strength}%
 				\subfig{A} Fragments of the \enhancer{AB80}, \enhancer{Cab-1}, and \enhancer{rbcS-E9} enhancers spanning 1\textendash3 mutation-sensitive regions (shaded rectangles; labeled a\textendash e, ab, abc, bc, de) as well as a control fragment (ctrl) from a mutation-insensitive region in \enhancer{Cab-1} and a shuffled version of the \enhancer{AB80} fragment d were ordered as oligonucleotides. These fragments were randomly combined to create synthetic enhancers with up to three fragments which were then subjected to Plant STARR-seq in tobacco plants grown in normal light/dark cycles (\light) or completely in the dark (\dark) for two days prior to RNA extraction. The mutational sensitivity plots are reproduced from \cref{fig:PEV_ld_MutSens}.\nextentry
 				\subfig{B} Violin plots of the strength of the synthetic enhancers grouped by the number of contained fragments.\nextentry
-				\subfig{C} For each enhancer fragment, the area under the curve (AUC) in the mutational sensitivity plots was calculated and plotted against the fragment's enhancer strength. AUCs in the \dark{} or \light{} for \enhancer{rbcS-E9} fragments c and d, respectively, are shown in \parensubfig{A}. Pearson's $R^2$, Spearman's $\rho$, and number ($n$) of enhancer fragments are indicated. A linear regression line is shown as a dashed line.\nextentry
-				\subfigtwo{D}{E} Plots of the strength of enhancer fragments or fragment combinations (separated by a + sign and shown in the order in which they appear in the construct) in three replicates (points) and the mean strength (lines).\nextentry
-				\subfig{F} Violin plots of the difference in enhancer strength between synthetic enhancers harboring the same two enhancer fragments but in different order. The $p$-value from a two-sided Wilcoxon rank-sum test comparing light and dark results is indicated ($p$).\nextentry
-				Violin plots in \parensubfig{B} and \parensubfig{F} represent the kernel density distribution and the box plots inside represent the median (center line), upper and lower quartiles and 1.5$\times$ interquartile range (whiskers) for all corresponding synthetic enhancers. Numbers at the bottom of each violin indicate the number of elements in each group.
-				Enhancer strength in \parensubfig{B}\subfigrefrange\parensubfig{E} was normalized to a control construct without an enhancer ($\log_2$ set to 0).
+				\subfig{C} For each enhancer fragment, the area under the curve (AUC) in the mutational sensitivity plots was calculated and plotted against the fragment's enhancer strength. AUCs in the \dark{} or \light{} for \enhancer{rbcS-E9} fragments c and d, respectively, are shown in \plainsubfigref{A}. Pearson's $R^2$, Spearman's $\rho$, and number ($n$) of enhancer fragments are indicated. A linear regression line is shown as a dashed line.\nextentry
+				\subfigrange{D}{G} Plots of the strength of enhancer fragments \parensubfig{D} or fragment combinations (separated by a + sign and shown in the order in which they appear in the construct; \plainsubfigref{E}) in three replicates (points) and the mean strength (lines). Enhancer strength was determined using tobacco plants grown in the light \parensubfig{F} or dark \parensubfig{G} prior to RNA extraction.\nextentry
+				\subfig{H} Violin plots of the difference in enhancer strength between synthetic enhancers harboring the same two enhancer fragments but in different order. The $p$-value from a two-sided Wilcoxon rank-sum test comparing light and dark results is indicated ($p$).\nextentry
+				Violin plots in \plainsubfigref{B} and \plainsubfigref{H} represent the kernel density distribution and the box plots inside represent the median (center line), upper and lower quartiles and 1.5$\times$ interquartile range (whiskers) for all corresponding synthetic enhancers. Numbers at the bottom of each violin indicate the number of elements in each group.
+				Enhancer strength in \plainsubfigref{B}\subfigrefrange\plainsubfigref{G} was normalized to a control construct without an enhancer ($\log_2$ set to 0).
 			}%
 			\label{fig:PEF_cooperativity}
 		\end{fig}
@@ -378,7 +415,7 @@
 				\subfig{B} Dual-luciferase reporter constructs (see \cref{fig:PEfl_fwd}\subfigunformatted{D}) were created for 11 synthetic enhancers (syn1\textendash 11). Nanoluciferase activity was measured in at least 4 T2 plants from these lines and normalized to the activity of luciferase. The NanoLuc/Luc ratio was normalized to a control construct without an enhancer (none; $\log_2$ set to 0). Box plots are as defined in \cref{fig:PEfl_fwd}\subfigunformatted{E}.
 				\subfig{C} The mean NanoLuc/Luc ratio was compared to the mean enhancer strength determined by STARR-seq. A linear regression line is shown as a dashed line. Error bars represent the 95\% confidence interval. The constituent fragments of the synthetic enhancers are indicated with fragments separated by a + sign. The first letter indicates the  enhancer from which the fragment is derived (A, \enhancer{AB80}; C, \enhancer{Cab-1}; R, \enhancer{rbcS-E9}) and the lowercase letters represent the fragment name.\nextentry
 				\subfig{D} A linear model was built to predict the strength of the synthetic enhancers based on the strength of the constituent individual fragments. Hexbin plots (color represents the count of points in each hexagon) of the correlation between the model's prediction and the measured data are shown.\nextentry
-				In \parensubfig{C}\subfigrefand\parensubfig{D}, Pearson's $R^2$, Spearman's $\rho$, and number ($n$) of synthetic enhancers are indicated.
+				In \plainsubfigref{C}\subfigrefand\plainsubfigref{D}, Pearson's $R^2$, Spearman's $\rho$, and number ($n$) of synthetic enhancers are indicated.
 			}%
 			\label{fig:PEF_model}
 		\end{fig}
@@ -389,6 +426,9 @@
 	
 	%%% Supplementary figures start
 	\ifsupp
+		
+		\pagestyle{SuppData}
+		\markright{Supplemental Data. Jores et al. \paperref}
 		
 		\begin{sfig}
 			\input{SuppFig1}%
@@ -517,7 +557,7 @@
 			\input{SuppFig14}%
 			\caption{%
 				\captiontitle[\supports{\cref{fig:PEF_cooperativity}}]{Correct spacing between mutation-sensitive regions is required for full activity}%
-				\subfig{A} Plots of the strength in the indicated condition of enhancer fragments or fragment combinations (separated by a + sign and shown in the order in which they appear in the construct) in three replicates (points) and the mean strength (lines). Enhancer strength was normalized to a control construct without an enhancer ($\log_2$ set to 0). Some plots are reproduced from \cref{fig:PEF_cooperativity}, \subfigunformatted{D}\subfigrefand\subfigunformatted{E}.
+				\subfig{A} Plots of the strength in the indicated condition of enhancer fragments (\cref{fig:PEF_cooperativity}\subfigunformatted{D}) or fragment combinations (separated by a + sign and shown in the order in which they appear in the construct; \cref{fig:PEF_cooperativity}\subfigunformatted{E}) in three replicates (points) and the mean strength (lines). Enhancer strength was normalized to a control construct without an enhancer ($\log_2$ set to 0). Some plots are reproduced from \cref{fig:PEF_cooperativity}, \subfigunformatted{F}\subfigrefand\subfigunformatted{G}.
 			}
 			\label{sfig:PEF_fragments}
 		\end{sfig}
@@ -533,5 +573,40 @@
 
 	\fi
 	%%% Supplementary figures end
+	
+	%%% Main figures start
+	\ifrev
+		
+		\pagestyle{empty}
+		
+		\begin{rfig}
+			\input{RevFig1}%
+			\caption{%
+				\captiontitle{Effect directions for mutations in putative transcription factor binding sites}%
+				\subfigtwo{A}{B} Mutations within each putative transcription factor binding site identified by the motif-scanning approach (scanning; see \cref{sfig:PEV_ld_fimo}) or by matching known transcription factor binding motifs to the sequence logo plots derived from the saturation mutagenesis data in the light (mutagenesis; see \cref{fig:PEV_ld_motifs}\subfigunformatted{B}\subfigrefrange\subfigunformatted{D}), were categorized into enhancer strength increasing (red) or decreasing (blue). The number and percentage of increasing and decreasing mutations was plotted for every binding site in the \segment{B} segments of the \enhancer{AB80}, \enhancer{Cab-1}, and \enhancer{rbcS-E9} enhancers \parensubfig{A} and summarized by the identification approach \parensubfig{B}. The solid (mean across 100 random samples) and dashed (mean +/- standard deviation) red lines in \plainsubfigref{B} indicate the median percentage of enhancer strength decreasing mutations in randomly sampled regions of the same length as the transcription factor binding sites.
+			}%
+			\label{rfig:effect_directions}
+		\end{rfig}
+		
+		\begin{rfig}
+			\input{RevFig2}%
+			\caption{%
+				\captiontitle{Correlation between enhancer fragment strength and results from the saturation mutagenesis on a per-enhancer basis}%
+				\subfig{A} For each enhancer fragment, the area under the curve (AUC) in the mutational sensitivity plots was calculated and plotted against the fragment's enhancer strength. Regression lines for each enhancer are shown and the goodness-of-fit ($R^2$) is indicated (\enhancer{AB80}, red; \enhancer{Cab-1}, green; \enhancer{rbcS-E9}, purple).
+			}%
+			\label{rfig:AUC_per_enhancer}
+		\end{rfig}
+		
+		\begin{rfig}
+			\input{RevFig3}%
+			\caption{%
+				\captiontitle{Epistatic interactions between single-nucleotide deletions within or outside of transcription factor binding sites}%
+				\subfigtwo{A}{b} Selected single-nucleotide deletion variants of the \segment{B} segment of the \enhancer{AB80}, \enhancer{Cab-1}, and \enhancer{rbcS-E9} enhancers and all possible combinations with two of these deletions were subjected to Plant STARR-seq in tobacco plants grown in normal light/dark cycles \parensubfig{A} or completely in the dark \parensubfig{B} for two days prior to RNA extraction. For each pair of deletions, the expected enhancer strength based on the sum of the effects of the individual deletions (additive model) is plotted against the measured enhancer strength. The color of the points represents the distance between the two deletions in a pair. The plots are separated depending on how many deletions fell within a transcription factor binding site (TFBS) as identified in \cref{fig:PEV_ld_motifs}. The ATTGG, CCAAT, and TGTGG sequences in \enhancer{AB80}, \enhancer{Cab-1}, and \enhancer{rbcS-E9}, respectively, were also considered as transcription factor binding sites for this analysis. 
+			}%
+			\label{rfig:PEVdouble}
+		\end{rfig}
+
+	\fi
+	%%% Main figures end
 
 \end{document}
