introduced changes required for final submission

--- a/figures/Figure1.tex
+++ b/figures/Figure1.tex
@@ -392,7 +392,7 @@
 	
 	\draw[ultra thick, -Latex] (curly) ++(0, .75\pgflinewidth) -- ++(0, -.3) arc[start angle = 180, end angle = 270, radius = .8cm] -- ++(.3, 0) coordinate[shift = {(1, .1)}] (Arabidopsis);
 	\arabidopsis[.9]{Arabidopsis};
-	\node [anchor = north east, align = center, inner xsep = 0pt, xshift = .1cm] at (curly) {integrate\\into\\\textit{Arabidopsis}\\genome};
+	\node [anchor = north east, align = center, inner xsep = 0pt, xshift = .1cm] at (curly) {integrate\\into\\Arabidopsis\\genome};
 	
 	\draw[ultra thick, -Latex] (Arabidopsis) ++(1, -.1) -- ++(.8, 0) node[anchor = west, align = center] {measure\\luciferase (Luc)\\and nanoluciferase\\(NanoLuc) activity};
 		
