--- a/figures/SuppFig7.tex
+++ b/figures/SuppFig7.tex
@@ -274,6 +274,7 @@
 	\coordinate[yshift = -.6\columnsep] (TF legend) at (AB80 |- xlabel.south);
 	
 	\node[anchor = north west, xshift = \columnsep, inner sep = 0pt] at (TF legend) {%
+		\fontspec{Arial}%
 		\rowcolors{2}{white}{gray!20}%
 		\setlength{\tabcolsep}{3pt}%
 		\pgfplotstabletypeset[
