--- a/figures/tikz_config.tex
+++ b/figures/tikz_config.tex
@@ -17,7 +17,7 @@
 \colorlet{none}{black}
 \colorlet{35S}{35S enhancer}
 \colorlet{AB80}{OrangeRed1}
-\colorlet{Cab-1}{Chartreuse3}
+\colorlet{Cab-1}{Gold3}
 \colorlet{rbcS-E9}{DarkOrchid2}
 
 \colorlet{light}{DarkGoldenrod1}
