--- a/figures/Figure4.tex
+++ b/figures/Figure4.tex
@@ -15,8 +15,8 @@
 		enlarge x limits = false,
 		enlarge y limits = {value = .25, upper},
 		xtick = {8, 12, ..., 32},
-		ytick = {-1, -.5, ..., 3},
-		y decimals = 1,
+		ytick = {-.5, 0, .5, 1},
+		yticklabels = {$-0.5$, $0$, $0.5$, $1.0$},
 		ylabel = $\log_2$(enhancer strength),
 		execute at begin axis/.append = {\fill[dark, fill opacity = .1] (16, \ymin) rectangle (24, \ymax);},
 		xticklabel style = {name = xticklabel},
